Automation of initial records in database
