# src/app/controllers/examTypeController.js
@@ -1,7 +1,7 @@
 const ExamType        = require("../models/ExamType");
 const dbConfig        = require('../../config/database');
 const valFnc          = require("../functions/validationFunctions");
-const defaultExamType = dbConfig.getDefaultExamTypes();
+//const defaultExamType = dbConfig.getDefaultExamTypes();
 
 module.exports = {
   async index(req, res) {
@@ -15,15 +15,5 @@ module.exports = {
     const { code, message } =  valFnc.getValidatedResponse(examType, 8);
 
     return res.status(code).json({ message });
-  },
-  async store(req, res) {
-    for (let description of defaultExamType) await ExamType.create({ description });
-
-    return res.status(200).send();
-  },
-  async destroy(req, res) {
-    for (let description of defaultExamType) await ExamType.findOneAndDelete({ description });
-
-    return res.status(200).send();
-  },
+  }
 };
